# AnimeAnalyst

./: .gitignore  LICENSE  README.md  gitignore.git  pyproject.toml  requirements.txt
src/: jikan_analyze.py  main.py
src/anime_analyst/: __main__.py  cli.py
src/anime_analyst/clients/: anilist.py  jikan.py
src/anime_analyst/core/: filter.py  merge.py  plotting.py  scoring.py
src/anime_analyst/data/: genres.py  io.py
